--- a/app/src/main/res/layout/bottom_sheet_menu.xml
+++ b/app/src/main/res/layout/bottom_sheet_menu.xml
@@ -19,7 +19,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
 
 
@@ -60,6 +61,7 @@
                             android:text="@string/attached_list"
                             android:textColor="@color/colorBlack"
                             android:textSize="20dp"
+
                             android:textStyle="bold" />
 
                     </LinearLayout>
