-fix bug icon color

--- a/app/src/main/res/layout/activity_input_tasks.xml
+++ b/app/src/main/res/layout/activity_input_tasks.xml
@@ -197,6 +197,7 @@
                                 android:layout_width="25dp"
                                 android:layout_height="25dp"
                                 android:src="@drawable/ic_calendar"
+                                app:tint="@color/colorBlack"
                                 android:layout_marginRight="15dp"/>
 
                             <TextView
