--- a/app/src/main/res/layout/view_notification_pin_reminder.xml
+++ b/app/src/main/res/layout/view_notification_pin_reminder.xml
@@ -15,9 +15,12 @@
         >
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_margin="4dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
             android:background="@drawable/background_with_shadow_radius"
             android:src="@drawable/ic_todolist" />
 
@@ -51,7 +54,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_plus_blue"
-        android:padding="10dp"
+        android:padding="5dp"
         android:clickable="true"
         android:focusable="true"
         android:background="@drawable/ripple_selector"
